...
import UIKit
import CoreLocation
import MapKit

class MapViewController: UIViewController, CLLocationManagerDelegate, MKMapViewDelegate {
    
    let mapView = MKMapView()
    let locationManager = CLLocationManager()
    
    let branches = [
        Branch(name: "Отделение 1", coordinate: CLLocationCoordinate2D(latitude: 53.9, longitude: 27.5667)),
        Branch(name: "Отделение 2", coordinate: CLLocationCoordinate2D(latitude: 53.91, longitude: 27.55)),
        Branch(name: "Отделение 3", coordinate: CLLocationCoordinate2D(latitude: 53.92, longitude: 27.57))
...
