...

    private let tableView = UITableView()
    private var accounts: [Account] = []
    var user: UserData?
    override func viewDidLoad() {
        super.viewDidLoad()
        title = "Ваши счета"
        view.backgroundColor = .systemBackground
        setupTableView()
        loadAccountsFromDatabase()
        navigationItem.rightBarButtonItem = UIBarButtonItem(barButtonSystemItem: .add, target: self, action: #selector(addAccount))
        print("Пользователь в AddAccountViewController: \(String(describing: user))")

...
